# angst

./: .cursorrules  .gitignore  README.md  analysis.md  diff.md  fix.md  flake.nix  justfile  opencode.json  plan.md  refac.md  shell.md  statix.toml  theme.md  todo.md  user.env.example
.cursor/: mcp.json
capabilities/: audio.nix  clipboard.nix  container.nix  default.nix  desktop.nix  git.nix  graphical.nix  monitoring.nix  network.nix  search.nix  ssh.nix
checks/: default.nix  lint-nix.nix  password.nix  shell.nix
common/: capabilities.nix  home.nix  user.nix
core/: default.nix  domain-config.nix  fontModule.nix  home.nix  treesitter.nix  virtualisation.nix
docs/: checks.md
domains/: default.nix
lib/: activation.nix  devshell.nix  domain.nix  domains.nix  fonts.nix  lintDesktop.nix  lintShell.nix  lintThemes.nix  mkDomainEnable.nix  mkHome.nix  mkHost.nix  mkNixos.nix  outputs.nix  parseEnv.nix  profiles.nix  read-config.nix  render.nix  scanHosts.nix  (+6 more)
tools/vm/: Cargo.toml  flake.nix  profile.txt
tools/vm/.cargo/: config.toml
tools/vm/crates/vm-cli/: Cargo.toml
tools/vm/crates/vm-cli/src/: commands.rs  lib.rs
tools/vm/crates/vm-cli/src/runner/: mcp.rs  mod.rs  vm.rs
tools/vm/crates/vm-core/: Cargo.toml
tools/vm/crates/vm-core/src/: config.rs  lib.rs  ssh.rs  systemd.rs
tools/vm/crates/vm-core/src/process/: controller.rs  io.rs  mod.rs  state.rs  sys.rs
tools/vm/crates/vm-mcp/: Cargo.toml
tools/vm/crates/vm-mcp/src/: lib.rs  protocol.rs  server.rs
tools/vm/crates/vm-mcp/src/tools/: handlers.rs  mod.rs  types.rs
tools/vm/src/: main.rs
(+558 files in other folders)
